A LOT HAS CHANGED
To begin with, this is now a fully functioning skeleton of my app.

It includes:
Splash Screen
- Log In (Working)
- Sign Up Buttons (Working)

Log In Screen
- Manual Sign In (Working)
- Google Sign In (Not Working) 1

Sign Up Screen
- Form Filled Out (Somewhat Working) 2
- Google Sign Up (Not Working) 1

Home Screen
- Menu Bar
- Menu Screens
-- Home
-- Locations
-- Reminders
-- Settings

1 - Fix Google Sign On API. It just doesn't work

2 - When form is complete, it should take the info entered and move along to the next screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,23 @@
     <string name="radioButton">You agree to the Terms and Conditions</string>
     <string-array name="radioGroup">
         You Agree to the Terms and Conditions
-        You are aware that this applications uses your current geographical location at any given time
+        You are aware that this applications uses your current geographical location at any given
+        time
     </string-array>
+
+    <!-- Items related to Main Screen including tabbed bar and settings-->
+    <string name="title_activity_main">Main</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_reminders">Reminders</string>
+    <string name="menu_locations">Locations</string>
+    <string name="settings">Settings</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
 </resources>
