--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="signOut"> Sign Out</string>
+
+    <string name="personName">acct.getDisplayName()</string>
+    <string name="personEmail">acct.getEmail()</string>
 </resources>
